--- a/templates/index.twig.html
+++ b/templates/index.twig.html
@@ -70,7 +70,9 @@ TODO: add template variable details.
                         {% if currentUser.image_240 %}
                             <img class="w-full -mt-1" src="{{ absoluteURL }}/{{ currentUser.image_240 }}" />
                         {% else %}
-                            <img class="w-full" src="https://placehold.co/30x30/2563EB/FFFFFF?text={{ currentUser.name |split(' ')|first|slice(0,1) }}"  />
+                            {% if isLoggedIn and currentUser %}
+                                <img class="w-full" src="https://placehold.co/30x30/2563EB/FFFFFF?text={{ currentUser.name |split(' ')|first|slice(0,1) }}"  />
+                            {% endif %}
                         {% endif %}
                         </a>
 
