--- a/templates/navigation.twig.html
+++ b/templates/navigation.twig.html
@@ -12,24 +12,26 @@ current user. Outputs the sidebar in 'full' view-mode and as a
 collapsed drop-down list in 'mini' view-mode.
 -->#}
 
-{% set sidebarClass = 'shadow bg-white rounded px-6 mb-6' %}
+{% set sidebarClass = 'bg-white rounded-2xl shadow-sm border border-gray-200 mb-6' %}
 
 {% if sidebar or menuModule is not empty %}
 <div class="mx-0 sm:mx-0 relative sm:static" x-data="{moduleMenu: false}" @keydown.escape.window="moduleMenu = false" @click.outside="moduleMenu = false" x-init="moduleMenu = false">
 
     {% if menuModule %}
-    <button @click="moduleMenu = !moduleMenu" class="relative w-full flex rounded justify-center items-center sm:w-48 bg-white sm:border p-2 mb-4 sm:mt-4 sm:absolute sm:top-0 sm:right-0 sm:mr-6 z-40 {{ sidebar ? 'lg:hidden' }}">
-        <span class="text-gray-600 text-xs font-bold uppercase ">
+    <button @click="moduleMenu = !moduleMenu" class="relative w-full flex rounded-lg justify-center items-center sm:w-56 bg-white border border-gray-200 p-3 mb-6 sm:mt-6 sm:absolute sm:top-0 sm:right-0 sm:mr-6 z-40 shadow-sm hover:shadow-md transition-shadow duration-300 {{ sidebar ? 'lg:hidden' }}">
+        <span class="text-gray-700 text-sm font-semibold">
             {{ __('Module Menu') }}
         </span>
-        {{ icon('basic', 'menu', 'size-6 sm:size-5 text-gray-600 ml-2') }}
+        <div class="ml-3 p-1 bg-gray-100 rounded-md">
+            {{ icon('basic', 'menu', 'size-4 text-gray-600') }}
+        </div>
     </button>
     {% endif %}
 
     {% if sidebar and sidebarPosition != 'bottom' %}
         {% for code in page.extraSidebar  %}
             {% if code is not empty %}
-            <div class="{{ sidebarClass }} md:column-2 lg:column-1 pb-6 pt-2 lg:pb-8">
+            <div class="{{ sidebarClass }} p-6">
                 {{ code|raw }}
             </div>
             {% endif %}
@@ -39,50 +41,81 @@ collapsed drop-down list in 'mini' view-mode.
     {% if sidebar and sidebarContents is iterable %}
         {% for sidebarContent in sidebarContents %}
             {% if sidebarContent %}
-            <div class="{{ sidebarClass }} md:column-2 lg:column-1 {{ page.breadcrumbs ? 'pt-4 lg:pt-0' }} pb-6 lg:pb-8">
+            <div class="{{ sidebarClass }} p-6">
                 {{ sidebarContent|raw }}
             </div>
             {% endif %}
         {% endfor %}
     {% elseif sidebar and sidebarContents %}
-        <div class="{{ sidebarClass }} md:column-2 lg:column-1 {{ page.breadcrumbs ? 'pt-4 lg:pt-0' }} pb-6 lg:pb-8">
+        <div class="{{ sidebarClass }} p-6">
             {{ sidebarContents|raw }}
         </div>
     {% endif %}
     
     {% if menuModule %}
-    <nav x-cloak="{{ sidebar ? 'mobile' : 'on' }}"  :class="moduleMenu ? 'block' : 'hidden'" x-data="{ menuItemActive: '{{ menuItemActive|replace({' ': '-', '&': '', '\'': ''}) }}' }" class="{{ sidebarClass }} w-full font-sans absolute top-0 z-30 sm:mt-16 pt-6 pt-12 sm:pt-6
-        {{ sidebar ? 'lg:block lg:static lg:p-0 lg:py-6 lg:mx-0 lg:mt-0' : '' }}" >
+    <nav x-cloak="{{ sidebar ? 'mobile' : 'on' }}" :class="moduleMenu ? 'block' : 'hidden'" x-data="{ menuItemActive: '{{ menuItemActive|replace({' ': '-', '&': '', '\'': ''}) }}' }" class="{{ sidebarClass }} w-full font-sans absolute top-0 z-30 sm:mt-20 p-6
+        {{ sidebar ? 'lg:block lg:static lg:mt-0' : '' }}" >
 
-        <ul class="w-full  list-none column-1 sm:column-2 md:column-3 m-0 px-0  
-            {{ sidebar ? 'lg:bg-transparent lg:border-0 lg:column-1 lg:shadow-none lg:px-8' : '' }}">
-
+        <div class="w-full {{ sidebar ? 'lg:bg-transparent lg:border-0 lg:shadow-none' : '' }}">
             {% for categoryName, items in menuModule %}
-                <li class="w-full column-no-break p-0">
-                    <h5 class="m-0 mb-1 text-sm px-px pt-2 pb-1 text-{{ themeColour }}-600 border-b-0 uppercase">
+                <div class="mb-8">
+                    <h5 class="text-sm font-bold text-gray-500 uppercase tracking-wider mb-4 px-3">
                         {{ __(categoryName, (items|first).textDomain) }}
                     </h5>
                     
-                    <ul class="list-none m-0 mb-6">
+                    <ul class="space-y-1">
                     {% for item in items %}
-                        <li class="-mx-4 -my-1">
+                        <li>
                             <a @click="moduleMenu = false" hx-boost="true" hx-target="#content-wrap" hx-select="#content-wrap" hx-swap="outerHTML show:window:top swap:0s" 
                             @click="menuItemActive = '{{ item.actionName|replace({' ': '-', '&': '', '\'': ''}) }}'"
-                            href="{{ item.url }}" class="block relative text-gray-700 no-underline px-3 py-1  text-sm leading-normal lg:leading-normal rounded transition cursor-pointer hover:bg-gray-200" :class="[ (menuItemActive === '{{ item.actionName|replace({' ': '-', '&': '', '\'': ''}) }}' ) ? 'navigation-link text-gray-900 bg-gray-300 font-semibold' : '' ] ">
-                                {{ __(item.name, item.textDomain) }}
+                            href="{{ item.url }}" 
+                            class="group flex items-center px-3 py-2.5 text-sm font-medium rounded-lg transition-all duration-200 hover:bg-gray-50 hover:text-gray-900"
+                            :class="[ (menuItemActive === '{{ item.actionName|replace({' ': '-', '&': '', '\'': ''}) }}' ) ? 'bg-gradient-to-r from-blue-50 to-teal-50 text-gray-900 border-l-4 border-blue-500 font-semibold' : 'text-gray-600' ]">
+                                
+                                <!-- Icon placeholder - you can customize these per category -->
+                                <div class="w-5 h-5 mr-3 flex-shrink-0" :class="[ (menuItemActive === '{{ item.actionName|replace({' ': '-', '&': '', '\'': ''}) }}' ) ? 'text-blue-600' : 'text-gray-400 group-hover:text-gray-600' ]">
+                                    {% if categoryName == 'ToolBox' %}
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                                            <path fill-rule="evenodd" d="M10 1a4.5 4.5 0 00-4.5 4.5V9H5a2 2 0 00-2 2v6a2 2 0 002 2h10a2 2 0 002-2v-6a2 2 0 00-2-2h-.5V5.5A4.5 4.5 0 0010 1zm3 8V5.5a3 3 0 10-6 0V9h6z" clip-rule="evenodd" />
+                                        </svg>
+                                    {% elseif categoryName == 'Students' %}
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                                            <path d="M10 9a3 3 0 100-6 3 3 0 000 6zM6 8a2 2 0 11-4 0 2 2 0 014 0zM1.49 15.326a.78.78 0 01-.358-.442 3 3 0 014.308-3.516 6.484 6.484 0 00-1.905 3.959c-.023.222-.014.442.025.654a4.97 4.97 0 01-2.07-.655zM16.44 15.98a4.97 4.97 0 002.07-.654.78.78 0 00.357-.442 3 3 0 00-4.308-3.517 6.484 6.484 0 011.907 3.96 2.32 2.32 0 01-.026.654zM18 8a2 2 0 11-4 0 2 2 0 014 0zM5.304 16.19a.844.844 0 01-.277-.71 5 5 0 019.947 0 .843.843 0 01-.277.71A6.975 6.975 0 0110 18a6.974 6.974 0 01-4.696-1.81z" />
+                                        </svg>
+                                    {% elseif categoryName == 'Staff' %}
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                                            <path d="M13 6a3 3 0 11-6 0 3 3 0 016 0zM18 8a2 2 0 11-4 0 2 2 0 014 0zM14 15a4 4 0 00-8 0v3h8v-3z" />
+                                        </svg>
+                                    {% elseif categoryName == 'Learn' %}
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                                            <path d="M10.394 2.08a1 1 0 00-.788 0l-7 3a1 1 0 000 1.84L5.25 8.051a.999.999 0 01.356-.257l4-1.714a1 1 0 11.788 1.838L7.667 9.088l1.94.831a1 1 0 00.787 0l7-3a1 1 0 000-1.838l-7-3zM3.31 9.397L5 10.12v4.102a8.969 8.969 0 00-1.05-.174 1 1 0 01-.89-.89 11.115 11.115 0 01.25-3.762zM9.3 16.573A9.026 9.026 0 007 14.935v-3.957l1.818.78a3 3 0 002.364 0l5.508-2.361a11.026 11.026 0 01.25 3.762 1 1 0 01-.89.89 8.968 8.968 0 00-5.35 2.524 1 1 0 01-1.4 0zM6 18a1 1 0 001-1v-2.065a8.935 8.935 0 00-2-.712V17a1 1 0 001 1z" />
+                                        </svg>
+                                    {% else %}
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                                            <path fill-rule="evenodd" d="M3 4a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm0 4a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm0 4a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm0 4a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd" />
+                                        </svg>
+                                    {% endif %}
+                                </div>
+                                
+                                <span class="truncate">{{ __(item.name, item.textDomain) }}</span>
+                                
+                                <!-- Active indicator -->
+                                <div class="ml-auto" :class="[ (menuItemActive === '{{ item.actionName|replace({' ': '-', '&': '', '\'': ''}) }}' ) ? 'block' : 'hidden' ]">
+                                    <div class="w-2 h-2 bg-blue-600 rounded-full"></div>
+                                </div>
                             </a>
                         </li>
                     {% endfor %}
                     </ul>
-                </li>
+                </div>
             {% endfor %}
-        </ul>
+        </div>
     </nav>
     {% endif %}
     
     {% if sidebar and sidebarPosition == 'bottom' %}
         {% for code in page.extraSidebar %}
-        <div class="{{ sidebarClass }} md:column-2 lg:column-1 pb-6 lg:pb-8">
+        <div class="{{ sidebarClass }} p-6">
             {{ code|raw }}
         </div>
         {% endfor %}
