--- a/templates/index.twig.html
+++ b/templates/index.twig.html
@@ -17,8 +17,9 @@ TODO: add template variable details.
         {{ include('head.twig.html') }}
         {% endblock head %}
     </head>
-
-    <body x-data="{ modalOpen: false, modalType: 'none', globalShowHide: false }"
+        
+        {% if isLoggedIn %}
+        <body x-data="{ modalOpen: false, modalType: 'none', globalShowHide: false }"
         class="h-full flex flex-col font-sans {{ bodyBackground  ? '' : 'body-gradient-' ~ themeColour|lower }}" style="{{ bodyBackground  ? bodyBackground : '' }} {{ themeColour is empty ? 'background: linear-gradient(to left top, #402568 2%, #935ee1 65%, #a871ec) no-repeat fixed' : '' }}">
         <a id="top"></a>
         {% set sidebarPos = isLoggedIn ? 'left' : 'right' %}
@@ -58,6 +59,12 @@ TODO: add template variable details.
                     {% endfor %}
                 </ul>
                 </div>
+
+                {% if isLoggedIn and currentUser %}
+                    <a href="{{ currentUser.url ?? './index.php?q=/preferences.php' }}" class="hidden sm:block hidden md:inline font-semibold text-gray-700 ">
+                        Hi, {{ currentUser.name }} &nbsp;&nbsp;
+                    </a>
+                {% endif %}
                 {% if isLoggedIn and currentUser %}
 
                 <a href="{{ currentUser.url ?? './index.php?q=/preferences.php' }}" class="hidden sm:block hidden md:inline font-semibold text-gray-700 ">
@@ -101,8 +108,16 @@ TODO: add template variable details.
         {% endblock %}
         </div>
         </header>
+        {% else %}
+        <body class="info-panel-gradient">
+        {% endif %}
+        {% if isLoggedIn %}
 
         <div id="wrapOuter" class="pt-80 bg-transparent-100">
+        {% else %}
+        <div id="wrapOuter" class="info-panel-gradient pt-60 height-full">
+        {% endif %}
+
             <div id="wrap" class="px-0 sm:px-6 lg:px-12 -mt-48 ">
                 {% block beforePage %}
                 {% endblock beforePage %}
@@ -128,7 +143,7 @@ TODO: add template variable details.
                         {{ include('navigation.twig.html') }}
                     {% endif %}
 
-                    <div id="content" class="{{ contentClass ? contentClass : 'max-w-full' }} {{ isHomePage and isLoggedIn ? 'bg-gray-100' : 'bg-white pb-6'}} w-full shadow  sm:rounded lg:flex-1 px-4 sm:px-8">
+                    <div id="content" class="{{ contentClass ? contentClass : 'max-w-full' }} {{ isHomePage and isLoggedIn ? 'bg-gray-100' : 'info-panel-gradient'}} w-full shadow  sm:rounded lg:flex-1 px-4 sm:px-8">
 
                         <div id="content-inner" class="h-full">
 
@@ -154,20 +169,25 @@ TODO: add template variable details.
                 {% block afterPage %}
                 {% endblock afterPage %}
             </div>
-
+            
+            {% if isLoggedIn %}
             {% block footer %}
                 {# Remove the old footer wrapper and styling #}
                 {{ include('footer.twig.html') }}
             {% endblock %}
+            {% endif %}
 
         </div>
 
-        {% block privacy %}
-        {{ include('privacy.twig.html') }}
-        {% endblock privacy %}
+        {% if isLoggedIn %}
+            {% block privacy %}
+            {{ include('privacy.twig.html') }}
+            {% endblock privacy %}
 
-        {% block foot %}
-        {{ include('foot.twig.html') }}
-        {% endblock foot %}
+            {% block foot %}
+            {{ include('foot.twig.html') }}
+            {% endblock foot %}
+        {% endif %}
+
     </body>
 </html>
