Modified welcome page

--- a/templates/welcome.twig.html
+++ b/templates/welcome.twig.html
@@ -21,6 +21,9 @@ For info about editing, see: https://twig.symfony.com/doc/2.x/
             <p class="mt-4 text-gray-600 text-lg">
                 Log in to access your AI-powered lesson plans, differentiation tools, and time-saving resources designed for the modern, inclusive classroom.
             </p>
+            <p class="text-sm text-gray-500 pt-5"><br>
+                Want a new account? <a href="/TeachNova/signup.php" class="font-medium text-blue-600 hover:text-blue-500">Sign  Up Here</a>.
+            </p>
         </div>
     </div>
 
