Updated font on TeachNova header.

--- a/templates/index.twig.html
+++ b/templates/index.twig.html
@@ -37,7 +37,7 @@ TODO: add template variable details.
                         </a>
 
                         <div class="flex-grow flex items-center justify-end text-right text-sm">
-                            &nbsp;&nbsp;<b>TeachNova </b>&nbsp;|&nbsp;
+                            <span class="text-2xl font-bold text-gray-900"> &nbsp;TeachNova &nbsp;&nbsp;</span>
                         {% if isLoggedIn %}
                             <nav id="header-menu" class="flex-1 justify-between text-gray-700 no-bold ">
                             {{ include('menu.twig.html') }}
