--- a/templates/head.twig.html
+++ b/templates/head.twig.html
@@ -20,6 +20,7 @@
         {% endif %}
            <!-- Tailwind CSS -->
             <script src="https://cdn.tailwindcss.com"></script>
+            <script src="https://unpkg.com/lucide@latest"></script>
     
             <!-- Google Fonts: Inter -->
             <link rel="preconnect" href="https://fonts.googleapis.com">
