Minor logo redirect fixes.

--- a/templates/welcome.twig.html
+++ b/templates/welcome.twig.html
@@ -2,7 +2,7 @@
 
     <div class="hidden lg:flex items-center justify-center p-2 pb-80 info-panel-gradient min-h-screen h-screen">
         <div class="max-w-md">
-            <a href="<?php echo $URL; ?>main.php" class="flex items-center space-x-2 mb-8">
+            <a href="{{ absoluteURL }}/main.php" class="flex items-center space-x-2 mb-8">
                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-blue-600"><path d="M12 2L2 7l10 5 10-5-10-5z"></path><path d="M2 17l10 5 10-5"></path><path d="M2 12l10 5 10-5"></path></svg>
                 <span class="text-3xl font-bold gradient-text">TeachNova</span>
             </a>
