Fixing incorrect revert.

--- a/templates/welcome.twig.html
+++ b/templates/welcome.twig.html
@@ -13,7 +13,7 @@
                 Log in to access your AI-powered lesson plans, differentiation tools, and time-saving resources designed for the modern, inclusive classroom.
             </p>
             <p class="text-sm text-gray-500 pt-5"><br>
-                Want a new account? <a href="<?php echo $URL; ?>signup.php" class="font-medium text-blue-600 hover:text-blue-500">Sign  Up Here</a>.
+                Want a new account? <a href="{{ absoluteURL }}signup.php" class="font-medium text-blue-600 hover:text-blue-500">Sign  Up Here</a>.
             </p>
         </div>
     </div>
