Making URL dynamic.

--- a/templates/index.twig.html
+++ b/templates/index.twig.html
@@ -31,7 +31,7 @@ TODO: add template variable details.
                 {% block header %}
                     <div id="header" class="relative flex justify-between items-center" >
 
-                        <a id="header-logo" class="block my-4 max-w-xs sm:max-w-full leading-none" href="/TeachNova/main.php"}">
+                        <a id="header-logo" class="block my-4 max-w-xs sm:max-w-full leading-none" href="{{ absoluteURL }}/main.php"}">
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-blue-600"><path d="M12 2L2 7l10 5 10-5-10-5z"></path><path d="M2 17l10 5 10-5"></path><path d="M2 12l10 5 10-5"></path></svg>
                             
                         </a>
