--- a/templates/head.twig.html
+++ b/templates/head.twig.html
@@ -11,8 +11,8 @@
         <!-- Custom TeachNova Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="{{ absoluteURL }}/favicon.ico"/>
     <link rel="icon" type="image/x-icon" href="{{ absoluteURL }}/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ absoluteURL }}/favicon.ico">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ absoluteURL }}/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ absoluteURL }}/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ absoluteURL }}/favicon-16x16.png">
     <link rel="apple-touch-icon" href="{{ absoluteURL }}/favicon.ico">
     
     {% for code in page.extraMeta %}
